<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:text="@string/title"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:background="@drawable/backgrounds"
        />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/input_view_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">


            <EditText
                android:id="@+id/user_email"
                android:hint="@string/user_email"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/user_name"
                android:hint="@string/username"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/first_name"
                android:hint="@string/first_name"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/last_name"
                android:hint="@string/last_name"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/age"
                android:hint="@string/age"
                android:textSize="22sp"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:textSize="22sp"
                    android:text="@string/save_button" />

                <Button
                    android:id="@+id/clear_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:textSize="22sp"
                    android:text="@string/clear_button" />
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/output_view_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/saved_email"
                android:layout_margin="30dp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:background="@drawable/backgrounds"
                />

            <TextView
                android:id="@+id/saved_username"
                android:layout_margin="30dp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:background="@drawable/backgrounds"
                />

            <TextView
                android:id="@+id/saved_name_and_lastname"
                android:layout_margin="30dp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:background="@drawable/backgrounds"
                />
            <TextView
                android:id="@+id/saved_age"
                android:layout_margin="30dp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:background="@drawable/backgrounds"
                />
            <Button
                android:id="@+id/again_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="30dp"
                android:textSize="22sp"
                android:text="@string/again_button"
                />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </FrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>